# vidAutoSpeeChange

./: README.md  background.js  content.js  manifest.json  offscreen.js  options.html  options.js  popup.html  popup.js  vidAutoSpeeChange.reg
C++/: CMakeLists.txt  com.dynamic.speed.json  main.cpp  test.cpp
C++/installer/: edge-install.bat  google-install.bat  uninstall.bat
Google/: background.js  content.js  manifest.json  offscreen.html  offscreen.js  options.js  popup.html
browserExtension/: i18n.js  manifest.json  options.html  options.js  popup.html  popup.js
browserExtension/_locales/en/: messages.json
browserExtension/_locales/zh_CN/: messages.json
